--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,13 @@ button {
     border-radius: 8px;
     background-color: #007bff;
     color: white;
-    transition: background-color 0.3s;
+    transition: filter 0.3s;
 }
 button:hover {
-    background-color: #4d0505;
+    filter: brightness(70%)
 }
 button:disabled {
-    background-color: #999;
+    background-color: #c9c8c8;
     cursor: not-allowed;
     opacity: 0.7;
 }
@@ -429,6 +429,5 @@ input[type="text"], input[type="number"] {
         order: 1; /* Statistik-Block kommt als erstes */
     }
 }
-
 
 
